// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabeledIcon rendering renders expected elements 1`] = `
<div
  className="LabeledIcon"
  role="button"
>
  <SvgIcon
    className="LabeledIcon__icon"
    icon={
      Object {
        "icon": "test",
      }
    }
  />
  <span
    className="LabeledIcon__label"
  >
    test
  </span>
</div>
`;

exports[`LabeledIcon rendering renders expected elements when className is set 1`] = `
<div
  className="LabeledIcon Test"
  role="button"
>
  <SvgIcon
    className="LabeledIcon__icon"
    icon={
      Object {
        "icon": "test",
      }
    }
  />
  <span
    className="LabeledIcon__label"
  >
    test
  </span>
</div>
`;

exports[`LabeledIcon rendering renders expected elements when underline is set 1`] = `
<div
  className="LabeledIcon"
  role="button"
>
  <SvgIcon
    className="LabeledIcon__icon"
    icon={
      Object {
        "icon": "test",
      }
    }
  />
  <span
    className="LabeledIcon__label LabeledIcon--underlined"
  >
    test
  </span>
</div>
`;
